--- a/guaguaka2.html
+++ b/guaguaka2.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <!--inital-scale初始缩放比例;user-scalable是否可以手动缩放-->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!--全屏显示内容-->
@@ -113,6 +113,8 @@
         $("#scratchpad").wScratchPad({ //执行刮奖区域方法
             width: 150, //刮奖区宽度
             height: 40,
+            // image:'./images/title-bg-green.png',
+            image2:'./images/activity-scratch-card-bg.jpg',
             color: "#a9a9a7", //刮奖区域覆盖背景颜色
             scratchDown: function() {
                 //鼠标按下去时
@@ -139,8 +141,6 @@
                         total++ //记录参与活动几次用,一共可以5次
                     }, "json");
                 }
-            },
-            callback:function(sp){
             }
         });
 
