--- a/guaguaka2.html
+++ b/guaguaka2.html
@@ -113,7 +113,7 @@
         $("#scratchpad").wScratchPad({ //执行刮奖区域方法
             width: 150, //刮奖区宽度
             height: 40,
-            // image:'./images/title-bg-green.png',
+            image:'./images/title-bg-green.png',
             image2:'./images/activity-scratch-card-bg.jpg',
             color: "#a9a9a7", //刮奖区域覆盖背景颜色
             scratchDown: function() {
