编写说明文档

--- a/guaguaka2.html
+++ b/guaguaka2.html
@@ -23,10 +23,8 @@
     <div class="main">
         <div class="cover">
             <img src="./images/activity-scratch-card-bannerbg.png">
-            <div id="prize">
-            </div>
-            <div id="scratchpad">
-            </div>
+            <div id="prize"></div>
+            <div id="scratchpad"></div>
         </div>
         <div class="content">
             <div id="zjl" style="display:none" class="boxcontent boxwhite">
